--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+/src/assets/myResources/
 /public/myResources/她/
 /public/myResources/maple/
 /public/myResources/
